fix: toast z-index

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -44,6 +44,7 @@ section {
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 10;
 }
 
 @import './components/_all.scss';
